--- a/Style/css/style.css
+++ b/Style/css/style.css
@@ -1,6 +1,6 @@
 h1 {
-  color: aquamarine;
-  text-align: center;
+    color: rgb(11, 129, 90);
+    text-align: center;
 }
 
 /*# sourceMappingURL=style.css.map */
